@@ -78,7 +78,7 @@
 	"Riccardo Mottola",
 	"Enrico Sersale (Original Author)"
     );
-    PROJECT_COPYRIGHT = "Copyright (C) 2002-2010";
+    PROJECT_COPYRIGHT = "Copyright (C) 2002-2012";
     PROJECT_COPYRIGHT_DESC = "Released under the GNU General Public License v2.0";
     PROJECT_CREATOR = "Riccardo Mottola,,,";
     PROJECT_DESCRIPTION = "PDF-PS viewer";
@@ -120,7 +120,7 @@
     PROJECT_GROUP = "No group avaliable!";
     PROJECT_MAINTAINER = "Riccardo Mottola,,,";
     PROJECT_NAME = GSPdf;
-    PROJECT_RELEASE = 0.4;
+    PROJECT_RELEASE = 0.5;
     PROJECT_SUMMARY = "No summary avaliable!";
     PROJECT_TYPE = Application;
     PROJECT_URL = "http://gap.nongnu.org/gspdf/";
