@@ -2,15 +2,15 @@
     ApplicationDescription = "PDF-PS viewer";
     ApplicationIcon = GSPdf.tiff;
     ApplicationName = GSPdf;
-    ApplicationRelease = 0.4;
+    ApplicationRelease = 0.5;
     Authors = (
 	"GAP Team",
 	"Riccardo Mottola",
 	"Enrico Sersale (Original Author)"
     );
-    Copyright = "Copyright (C) 2002-2010";
+    Copyright = "Copyright (C) 2002-2012";
     CopyrightDescription = "Released under the GNU General Public License v2.0";
-    FullVersionID = 0.4;
+    FullVersionID = 0.5;
     NSExecutable = GSPdf;
     NSIcon = GSPdf.tiff;
     NSMainNibFile = GSPdf.gorm;
